Alignment issue of avatar

--- a/kobenx/src/components/Avatar.css
+++ b/kobenx/src/components/Avatar.css
@@ -7,6 +7,8 @@
 .fallback {
     background-color: rgb(226, 226, 226);
     align-content: center;
+    align-items: center;
+    text-align: center;
     font-family: 'Manrope';
     font-weight: 600;
     font-size: 18px;
